<resources>
	<string name="app_name">Words Watchface Configurator</string>
	<string name="background_color">Background color</string>
	<string name="accent_color">Accent color</string>
	<string name="text_color">Text color</string>
	<string name="shadow_text_color">Shadow text color</string>
	<string name="language">Language</string>
	<string name="lang_czech">Czech</string>
	<string name="lang_english">English</string>
	<string name="snackbar_ambient">Ambient mode is </string>
	<string name="ambient_on">on</string>
	<string name="ambient_off">off</string>
	<string name="shape">shape</string>
	<string name="round">round</string>
	<string name="square">square</string>
	<string name="About">About</string>
	<string name="author">Author</string>
	<string name="my_name" translatable="false">Dušan Jenčík</string>
	<string name="aim_description">This application is example of watch face for Android wear and its configuration.</string>
	<string name="aim">Aim</string>
	<string name="source_codes">Source codes</string>
	<string name="source_codes_description">All source codes are public.</string>
	<string name="bitbucket_url" translatable="false">https://bitbucket.org/dusanjencik/words-watchface</string>
	<string name="version">Version</string>
</resources>
